--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -60,6 +60,6 @@ form label {
   color: maroon;
 }
 
-/*table#movies th.hilite {*/
-/*  background-color: yellow;*/
-/*}*/
+table#movies th.hilite {
+  background-color: yellow;
+}
