--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,9 +4,9 @@
 %table#movies
   %thead
     %tr
-      %th{:class => @title_header}= link_to 'Movie Title', movies_path(:sort => 'title', :ratings => @selected_ratings), :id => 'title_header'
+      %th{:id => "title_header",:class =>session[:title_class]}=link_to 'Movie title', movies_path(:title_click =>"yes")
       %th Rating
-      %th{:class => @date_header}= link_to 'Release Date', movies_path(:sort => 'release_date', :ratings => @selected_ratings), :id => 'release_date_header'
+      %th{:id => "release_date_header",:class => session[:release_date_class]}=link_to 'Release Date', movies_path(:release_date_click =>"yes")
       %th More Info
   %tbody
     - @movies.each do |movie|
