--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -6,7 +6,7 @@
     %tr
       %th{:id => "title_header",:class =>session[:title]}=link_to 'Movie title', movies_path(:choose_title =>"yes")
       %th Rating
-      %th{:id => "release_date_header",:class => session[:release_date]}=link_to 'Release Date', movies_path(:release_date_click =>"yes")
+      %th{:id => "release_date_header",:class => session[:release_date]}=link_to 'Release Date', movies_path(:choose_release_date =>"yes")
       %th More Info
   %tbody
     - @movies.each do |movie|
