--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -5,7 +5,7 @@
   Include:
   - @all_ratings.each do |rating|
     = rating
-    = check_box_tag "ratings[#{rating}]",1,session[:checked][rating], :id=> "ratings_#{rating}"
+    = check_box_tag "ratings[#{rating}]",1, (true if session[:checked][rating])
   = submit_tag 'Refresh',  {:id => "ratings_submit"}
 
 
